Dont assert in  Workspace::setupWindowShortcut

This can be triggered by shortcuts which can be emitted
multiple times.
BUG:498456
FIXED-IN:6.3


(cherry picked from commit b36151e81a456d25b118abadb791b4a12bc624be)

Co-authored-by: David Redondo <kde@david-redondo.de>